# CoAI

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 51db959ab315_init_schema.py
apps/backend/app/: config.py  db.py  embeddings.py  ingestion.py  main.py  models.py  retrieval.py  schemas.py
apps/frontend/: Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/types/: markdown.d.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
infra/docker/: .env.example  docker-compose.yml
infra/terraform/: README.md  alb.tf  ecr.tf  ecs.tf  efs.tf  locals.tf  main.tf  network.tf  outputs.tf  rds.tf  secrets.tf  security.tf  terraform.tfvars  variables.tf
